tests/errors/macro/macro_grid_in_name.c
#define name#define s	// #: не требуется в макроопределении

int main()
{
	return 0;
}
